--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,45 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>CS453 MLBS Project 2</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content class="grid-basic-page">
+<ion-grid>
+  <ion-row>
+    <ion-col col-12>
+      <ion-searchbar (ionInput)="getItems($event)" [(ngModel)]="searchQuery"></ion-searchbar>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col col-6>
+    <ion-label>Search Radius</ion-label>
+  </ion-col>
+    <ion-col col-6>
+    <ion-select [(ngModel)]="radius">
+      <ion-option value="100">100m</ion-option>
+      <ion-option value="500">500m</ion-option>
+      <ion-option value="1000">1000m</ion-option>
+      <ion-option value="2000">2000m</ion-option>
+      <ion-option value="3000">3000m</ion-option>
+      <ion-option value="4000">4000m</ion-option>
+      <ion-option value="5000">5000m</ion-option>
+      <ion-option value="10000">10000m</ion-option>
+      <ion-option value="20000">20000m</ion-option>
+    </ion-select>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col col-12>
+      <ion-list>
+        <button ion-item *ngFor="let item of items" (click)="itemSelected(item)">
+          <ion-avatar item-start>
+            <img src="{{item.icon}}">
+          </ion-avatar>
+          {{ item.name }} , {{item.geometry.location.lat}}, {{item.geometry.location.lng}}
+        </button>
+      </ion-list>
+    </ion-col>
+  </ion-row>
+</ion-grid>
 </ion-content>
