Full text search working, added view more info modal to deal with space limitations on mobile

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,10 +8,15 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header>Liam Gomez</ion-list-header>
     <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      <ion-icon name="ios-contact" item-start></ion-icon>
+      liamgomez@nevada.unr.edu
+    </ion-item>
+    <ion-list-header>Nick Wehrhan</ion-list-header>
+    <ion-item>
+      <ion-icon name="ios-contact" item-start></ion-icon>
+      nwehrhan@gmail.com
     </ion-item>
   </ion-list>
 </ion-content>
