--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content padding>
-
+Project 2 for CS453, an MLBS app using google places api. Built using ionic, and ionic native for finding current location.
 </ion-content>
