--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,42 +4,51 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content class="grid-basic-page">
-<ion-grid>
-  <ion-row>
-    <ion-col col-12>
-      <ion-searchbar (ionInput)="getItems($event)" [(ngModel)]="searchQuery"></ion-searchbar>
-    </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col col-6>
-    <ion-label>Search Radius</ion-label>
-  </ion-col>
-    <ion-col col-6>
-    <ion-select [(ngModel)]="radius">
-      <ion-option value="100">100m</ion-option>
-      <ion-option value="500">500m</ion-option>
-      <ion-option value="1000">1000m</ion-option>
-      <ion-option value="2000">2000m</ion-option>
-      <ion-option value="3000">3000m</ion-option>
-      <ion-option value="4000">4000m</ion-option>
-      <ion-option value="5000">5000m</ion-option>
-      <ion-option value="10000">10000m</ion-option>
-      <ion-option value="20000">20000m</ion-option>
-    </ion-select>
-    </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col col-12>
-      <ion-list>
-        <button ion-item *ngFor="let item of items" (click)="itemSelected(item)">
-          <ion-avatar item-start>
-            <img src="{{item.icon}}">
-          </ion-avatar>
-          {{ item.name }} , {{item.geometry.location.lat}}, {{item.geometry.location.lng}}
-        </button>
-      </ion-list>
-    </ion-col>
-  </ion-row>
-</ion-grid>
+<ion-content class="outer-content">
+<ion-card>
+
+  <ion-card-header>
+    Inputs
+  </ion-card-header>
+  <ion-card-content>
+  <ion-list>
+    <ion-list-header>Inputs</ion-list-header>
+    <ion-item>
+        <ion-label>Search Radius</ion-label>
+        <ion-select [(ngModel)]="radius">
+          <ion-option value="100">100m</ion-option>
+          <ion-option value="500">500m</ion-option>
+          <ion-option value="1000">1000m</ion-option>
+          <ion-option value="2000">2000m</ion-option>
+          <ion-option value="3000">3000m</ion-option>
+          <ion-option value="4000">4000m</ion-option>
+          <ion-option value="5000">5000m</ion-option>
+          <ion-option value="10000">10000m</ion-option>
+          <ion-option value="20000">20000m</ion-option>
+          <ion-option value="30000">30000m</ion-option>
+          <ion-option value="40000">40000m</ion-option>
+        </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Search Type</ion-label>
+      <ion-select [(ngModel)]="selected_type">
+        <ion-option *ngFor="let type of supported_types" value="{{ type }}">{{ type }}</ion-option>
+      </ion-select>
+    </ion-item>
+
+      <ion-searchbar [(ngModel)]="searchQuery" placeholder="Keyword"></ion-searchbar>
+  </ion-list>
+  <button ion-button full (click)="getItems($event)">Search Places</button>
+ </ion-card-content>
+</ion-card>
+  <ion-list>
+      <ion-list-header>Results</ion-list-header>
+      <button ion-item *ngFor="let item of items; let i = index" (click)="itemSelected(item)">
+        <ion-avatar item-start>
+          <img src="{{item.icon}}">
+        </ion-avatar>
+        {{ item.name }} , {{item.geometry.location.lat}}, {{item.geometry.location.lng}}, {{ i }}
+      </button>
+  </ion-list>
 </ion-content>
