Fixed 0 result indicator

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -60,7 +60,7 @@
         Loading...
       </ion-item>
       <ion-item *ngIf="items && items.length > 0">
-        Loading...
+        No results found
       </ion-item>
   </ion-list>
   </ion-card-content>
